--- a/src/main/webapp/resources/html/404.html
+++ b/src/main/webapp/resources/html/404.html
@@ -8,14 +8,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,900" rel="stylesheet">
 	<link type="text/css" rel="stylesheet" href="/resources/css/style.css" />
 	<link type="text/css" rel="stylesheet" href="/resources/css/404style.css" />
-
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-
-		<![endif]-->
-	<!--<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>-->
-	<!--<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>-->
 </head>
 
 <body>
@@ -26,7 +18,7 @@
 			</div>
 			<h2>We are sorry, Page not found!</h2>
 			<p>The page you are looking for might have been removed had its name changed or is temporarily unavailable.</p>
-			<a href="/">Back To Homepage</a>
+			<a href="/besttaxi">Back To Homepage</a>
 		</div>
 	</div>
 </body>
